message: consume