@@ -151,6 +151,9 @@
                     <showWarnings>true</showWarnings>
                     <compilerArgs>
                         <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/java.nio=ALL-UNNAMED</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
